--- a/style/torillic.css
+++ b/style/torillic.css
@@ -49,7 +49,8 @@
   max-width: 100%; 
   column-span: all; 
   display: block;
-  margin: 1cm 0;
+  margin: 0;
+  margin-bottom: 1cm;
 }
 
 main > div {
