--- a/style/torillic.css
+++ b/style/torillic.css
@@ -30,9 +30,11 @@
   width: 21cm;
   /* Add columns */
   column-count: 2;
-  column-gap: 0.5cm;
+  column-gap: 1cm;
   column-width: 8cm;
   padding: 2cm;
+  /* Create 3d context */
+  z-index: 0;
 }
 .wiki-page p, .wiki-page h1, .wiki-page h2, .wiki-page h3, .wiki-page h4, .wiki-page h5, .wiki-page h6, .wiki-page div, .wiki-page pre {
   width: auto;
@@ -255,11 +257,14 @@ img {
 }
 figure {
   margin: 0;
+  break-inside: avoid;
 }
 
 .splashimg {
-  z-index: 0;
   position: relative;
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
 
 .splashimg:before {
@@ -271,7 +276,7 @@ figure {
   background-image: url("../assets/splash.png");
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center center;
   content: " ";
   z-index: -1;
 }
