--- a/style/torillic.css
+++ b/style/torillic.css
@@ -54,6 +54,13 @@
   margin: 0;
   margin-bottom: 1cm;
 }
+.fullwidth + h3,
+.fullwidth + h4,
+.fullwidth + h5,
+.fullwidth + h6,
+.fullwidth + p {
+  margin-top: 0;
+}
 
 main > div {
   box-shadow: .5cm .5cm 1cm .5cm rgba(0, 0, 0, 0.5);
