New structure using markmoji syntax for contents

--- a/source/_style/torillic.css
+++ b/source/_style/torillic.css
@@ -48,20 +48,6 @@
 }
 
 .wiki-homepage {
-  color: white;
-  position: relative;
-  margin: 2rem auto;
-  box-sizing: border-box;
-  width: 21cm;
-  /* Add columns */
-  column-count: 2;
-  column-gap: 1cm;
-  column-width: 10cm;
-  /* Create 3d context */
-  z-index: 0;
-}
-
-.wiki-contents-array {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -69,7 +55,7 @@
   max-width: 100%;
   padding: 5rem;
 }
-.wiki-contents-array .wiki-contents {
+.wiki-homepage .wiki-contents {
   width: 8cm;
   margin: 1cm;
 }
